--- a/.docker/website/Dockerfile
+++ b/.docker/website/Dockerfile
@@ -9,6 +9,7 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get -y update && apt-get -y install \
     apt-transport-https \
     ca-certificates \
+    curl \
     software-properties-common \
     wget
 
@@ -41,13 +42,24 @@ RUN apt-get -y clean
 # Copy the xdebug configuration file.
 COPY xdebug.ini /etc/php/7.3/mods-available/xdebug.ini
 
+# Copy the startup script.
+COPY start.sh /opt/start.sh
+RUN chmod +x /opt/start.sh
+
 # Copy the 000-default file for Apache2.
 COPY 000-default.conf /etc/apache2/sites-available/000-default.conf
 
 # Enable the PHP APCu module, the Apache2 rewrite module and restart Apache.
 RUN phpenmod apcu && a2enmod rewrite && service apache2 restart
 
+# Install PHP composer, globally available.
+RUN curl -o /tmp/composer-setup.php https://getcomposer.org/installer \
+&& curl -o /tmp/composer-setup.sig https://composer.github.io/installer.sig \
+&& php -r "if (hash('SHA384', file_get_contents('/tmp/composer-setup.php')) !== trim(file_get_contents('/tmp/composer-setup.sig'))) { unlink('/tmp/composer-setup.php'); echo 'Invalid installer' . PHP_EOL; exit(1); }" \
+&& php /tmp/composer-setup.php --no-ansi --install-dir=/usr/local/bin --filename=composer --snapshot \
+&& rm -f /tmp/composer-setup.*
+
 # Allow external access on port 80.
 EXPOSE 80
 
-CMD ["apachectl", "-D", "FOREGROUND"]
+CMD ["./opt/start.sh"]
