--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "type": "project",
   "license": "proprietary",
   "require": {
-    "namnv609/php-rest-countries": "1.0.0"
+    "namnv609/php-rest-countries": "1.0.0",
+    "symfony/yaml": "^4.3"
   },
   "autoload": {
     "psr-4": {
